# qpedia

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  APPROVED-MODELS.md  AUTH-DESIGN.md  BRAND.md  CHANGELOG.md  Cargo.toml  DESIGN.md  Dockerfile  FEATURE-LANDING.md  INTEGRATION.md  LLM-CONFIG.md  ONE-PAGER.md  OPEN-CORE.md  README.md  ROADMAP.md  SECURITY.md  SPEC-v2.md  STORAGE-MODEL.md  TASK-external-app-auth.md  TASK-managed-llm-billing.md  docker-compose.yml  qpedia-openapi.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  feature-landing-check.yml
contracts/: qpedia-openapi.yaml
crates/qpedia-api/: Cargo.toml
crates/qpedia-api/proptest-regressions/: telemetry.txt
crates/qpedia-api/src/: app.rs  auth.rs  firebase.rs  health.rs  lib.rs  m2m.rs  main.rs  oauth.rs  observability.rs  observability_proxy.rs  rate_limit.rs  routes.rs
crates/qpedia-api/src/telemetry/: http.rs  http_layer.rs  mod.rs
crates/qpedia-api/tests/: grafana_proxy.rs  http_instrumentation.rs  observability_compose_smoke.rs
crates/qpedia-bench/: Cargo.toml  README.md
crates/qpedia-bench/bench/: .gitignore  baseline.json  queries.jsonl
crates/qpedia-bench/bench/corpus/concepts/: disaster-recovery.md  failover-runbook.md  oauth-flow-design.md  oauth-token-refresh.md  session-rotation.md
crates/qpedia-bench/bench/corpus/entities/: bge-reranker.md  bge-small.md
crates/qpedia-bench/bench/corpus/runbooks/: err-payment-gateway-rejected.md  err-payment-gateway-timeout.md  err-payment-gateway-unauthorized.md  payment-v2-enforce-disable.md  payment-v2-enforce-enable.md  rollback-v3-1.md  rollback-v3-2.md  rollout-v3-2.md
crates/qpedia-bench/src/: main.rs
crates/qpedia-cli/: Cargo.toml
crates/qpedia-cli/src/: main.rs
crates/qpedia-connectors/: Cargo.toml
crates/qpedia-connectors/src/: confluence.rs  gdrive.rs  lib.rs  oauth.rs
crates/qpedia-core/: Cargo.toml
crates/qpedia-core/src/: acl.rs  error.rs  ids.rs  job.rs  lib.rs  source.rs  tenant.rs  wiki.rs
crates/qpedia-embed/: Cargo.toml
crates/qpedia-embed/src/: lib.rs  rerank.rs
crates/qpedia-extract/: Cargo.toml
crates/qpedia-extract/src/: docx.rs  html.rs  image.rs  lib.rs  marker.rs  media.rs  pdf.rs  text.rs
crates/qpedia-ingest/: Cargo.toml
crates/qpedia-ingest/src/: agent.rs  lib.rs  pipeline.rs  runner.rs  telemetry.rs  validator.rs
crates/qpedia-ingest/src/handlers/: archive.rs  classify.rs  distill.rs  embed.rs  ingest.rs  lint.rs  mod.rs  reembed.rs  remove.rs  sync.rs
crates/qpedia-ingest/tests/: job_trace_linkage.rs
crates/qpedia-lint/: Cargo.toml
crates/qpedia-lint/src/: lib.rs
crates/qpedia-llm/: Cargo.toml
crates/qpedia-llm/src/: anthropic.rs  lib.rs  models.rs  openai_compatible.rs  openrouter.rs
crates/qpedia-pg-store/: Cargo.toml
crates/qpedia-pg-store/migrations/: 0001_init.sql  0002_rls.sql  0003_oidc_pending.sql  0004_folders.sql  0005_oauth_grants.sql  0006_workspaces.sql  0007_workspace_domains.sql  0008_llm_config.sql
crates/qpedia-pg-store/src/: audit.rs  connectors.rs  events.rs  folder_acls.rs  folders.rs  jobs.rs  lib.rs  llm_config.rs  oauth_grants.rs  oidc_pending.rs  sessions.rs  slug.rs  sources.rs  telemetry.rs  tenants.rs  trait_impls.rs  wiki.rs  workspaces.rs
crates/qpedia-pg-store/tests/: datastore_spans.rs  queue_depth.rs  smoke.rs
crates/qpedia-retriever/: Cargo.toml
crates/qpedia-retriever/src/: lib.rs
crates/qpedia-store/: Cargo.toml
crates/qpedia-store/migrations/: 0001_init.sql  0002_classification.sql  0003_sessions.sql  0004_folder_acls.sql  0005_tenants.sql  0006_connectors.sql
crates/qpedia-store/src/: blob.rs  lib.rs  sqlite.rs  weaviate.rs  wikirepo.rs
deploy/: Caddyfile  README.md  deploy.sh
docs/: INTEGRATION.md  LLM-CONFIG.md  TASK-external-app-auth.md  TASK-gemini-provider.md  TASK-llm-pvt-gating.md  TASK-llm-pvt-relocation.md  TASK-managed-llm-billing.md  TASK-steering-compliance.md
observability/grafana/dashboards/: anomalies-and-alerts.json  db-datastore-performance.json  dependency-health.json  ingestion-job-queue-performance.json  logs-explorer.json  service-overview.json  trace-explorer.json
observability/grafana/provisioning/dashboards/: dashboards.yaml
observability/grafana/provisioning/datasources/: loki.yaml  prometheus.yaml  tempo.yaml
scripts/: backup.sh  eval-questions.example.json  fetch-pdfium.sh  restore.sh  verify-agent.sh  verify-chat.sh  verify-classification.sh  verify-embeddings.sh  verify-eval.sh  verify-hints-storage.sh
sidecar/marker/: Dockerfile  README.md  requirements.txt  server.py
web/: .env.example  .gitignore  package-lock.json  package.json  svelte.config.js  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: api.ts  firebase.ts  index.ts  stores.svelte.ts
web/src/lib/components/: FolderTree.svelte  StatusChip.svelte  UploadPanel.svelte  WorkspaceSwitcher.svelte
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/src/routes/admin/: +page.svelte
web/src/routes/chat/: +page.svelte
web/src/routes/invite/[token]/: +page.svelte
web/src/routes/landing/: +page.svelte
web/src/routes/login/: +page.svelte
web/src/routes/search/: +page.svelte
web/src/routes/wiki/: +page.svelte
web/src/routes/wiki/[...path]/: +page.svelte
web/static/: site.webmanifest
