[package]
name = "qpedia-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "qpedia"
path = "src/main.rs"

[dependencies]
qpedia-core.workspace = true
qpedia-store.workspace = true
qpedia-lint.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
