[package]
name = "qpedia-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
ulid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
