[package]
name = "qpedia-extract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
qpedia-core.workspace = true
async-trait.workspace = true
pulldown-cmark.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
tokio.workspace = true
pdfium-render.workspace = true
imagesize.workspace = true
tempfile.workspace = true
reqwest = { workspace = true, features = ["multipart"] }
