[package]
name = "qpedia-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
qpedia-core.workspace = true
qpedia-store.workspace = true
qpedia-extract.workspace = true
qpedia-llm.workspace = true
qpedia-embed.workspace = true
qpedia-lint.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true
chrono.workspace = true
futures.workspace = true
pulldown-cmark.workspace = true
