[package]
name = "qpedia-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
qpedia-core.workspace = true
qpedia-store.workspace = true
qpedia-extract.workspace = true
qpedia-llm.workspace = true
qpedia-embed.workspace = true
qpedia-lint.workspace = true
qpedia-connectors.workspace = true
qpedia-pg-store.workspace = true
sha2.workspace = true
hex.workspace = true
bytes.workspace = true
mime_guess.workspace = true
zip.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
opentelemetry.workspace = true
tracing-opentelemetry.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true
chrono.workspace = true
futures.workspace = true
pulldown-cmark.workspace = true

[dev-dependencies]
proptest.workspace = true
opentelemetry_sdk = { workspace = true, features = ["testing"] }
tracing-subscriber.workspace = true
