[package]
name = "qpedia-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
qpedia-core.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
futures.workspace = true
url.workspace = true
async-stream.workspace = true
bytes.workspace = true
base64.workspace = true
