[package]
name = "qpedia-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
qpedia-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
gix.workspace = true
reqwest.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
ulid.workspace = true
url.workspace = true
bytes.workspace = true
uuid.workspace = true
qpedia-connectors.workspace = true
